--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,1 +1,64 @@
 /* app css stylesheet */
+.bold {
+	font-weight: bold!important;
+}
+
+.no-margin {
+	margin: 0!important;
+}
+
+.left {
+	float: left!important;
+}
+
+.right {
+	float: right!important;
+}
+
+.full-size {
+	width: 100%;
+}
+
+/* Backgrounds */
+
+.bg-gray {
+	background: #D1D1D1;
+}
+
+/* Texts */
+
+.text-6 {
+	font-size: 6px!important;
+}
+
+.text-8 {
+	font-size: 8px!important;
+}
+
+.text-10 {
+	font-size: 10px!important;
+}
+
+.text-12 {
+	font-size: 12px!important;
+}
+
+.text-14 {
+	font-size: 14px!important;
+}
+
+.text-16 {
+	font-size: 16px!important;
+}
+
+.text-18 {
+	font-size: 18px!important;
+}
+
+.text-20 {
+	font-size: 20px!important;
+}
+
+.text-22 {
+	font-size: 22px!important;
+}
